[package]
name = "libinjection"
version = "0.2.5"
authors = ["Navid <yaa110@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["sqli", "xss", "injection"]
repository = "https://github.com/arvancloud/libinjection-rs"
homepage = "https://github.com/arvancloud/libinjection-rs"
documentation = "https://docs.rs/libinjection"
description = "Rust bindings for libinjection"
categories = ["api-bindings", "external-ffi-bindings"]


[badges]
travis-ci = { repository = "arvancloud/libinjection-rs" }

[build-dependencies]
bindgen = "0.55"
git2 = "0.13"
regex = "1.4"
